manifests/network-policies/mm-installation-netpol.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-from-other-namespaces
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metrics-prom
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: prometheus
    ports:
    - protocol: TCP
      port: 8065 # MM
    - protocol: TCP
      port: 8067 # MM
    - protocol: TCP
      port: 9125 # MySQL
    - protocol: TCP
      port: 9093 # Playbooks
    - protocol: TCP
      port: 9092 # Boards
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: external-mm-allow
spec:
  podSelector: {}
  ingress:
  - ports:
    - port: 8065
      protocol: TCP
    from:
      - namespaceSelector:
          matchLabels:
            name: nginx
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: external-mm-v1beta-allow
spec:
  podSelector: {}
  ingress:
    - ports:
        - port: 8065
          protocol: TCP
      from:
        - namespaceSelector:
            matchLabels:
              name: nginx
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: operator-db-allow
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: database
      app.kubernetes.io/name: mysql
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: mysql-operator
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-metadata-access
spec:
  podSelector:
     matchLabels:
      app: mattermost 
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 169.254.169.254/32
